= vasputils changelog

== Master (for 0.0.2)

== Version (for 0.0.1)
  - Change indent style from tab char to two spaces.
  - Adjust to malge 0.0.2.

== Version 0.0.0