@@ -1,0 +1,15 @@
+module Mageo; end
+
+require "mageo/axes.rb"
+require "mageo/cylinder.rb"
+require "mageo/octahedron.rb"
+require "mageo/polar2d.rb"
+require "mageo/polar3d.rb"
+require "mageo/polyhedron.rb"
+require "mageo/segment.rb"
+require "mageo/sphere.rb"
+require "mageo/tetrahedron.rb"
+require "mageo/triangle.rb"
+require "mageo/vector.rb"
+require "mageo/vector3d.rb"
+require "mageo/vector3dinternal.rb"
