@@ -3,7 +3,8 @@
 
 require "test/unit"
 require "helper"
-require "mageo/polyhedron.rb"
+require 'mageo.rb'
+#require "mageo/polyhedron.rb"
 
 # initialize でインスタンスを生成できないことのみテストする。
 # その他の機能はサブクラスでテスト。
