@@ -2,10 +2,11 @@
 
 require "test/unit"
 require "matrix"
-require "mageo/vector3d.rb"
-require "mageo/vector3dinternal.rb"
-require "mageo/polar2d.rb"
-require "mageo/polar3d.rb"
+require 'mageo.rb'
+#require "mageo/vector3d.rb"
+#require "mageo/vector3dinternal.rb"
+#require "mageo/polar2d.rb"
+#require "mageo/polar3d.rb"
 
 class TC_Array < Test::Unit::TestCase
   $tolerance = 10.0**(-10)
